// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upgradeMusicIndex v1 → current upgrades a v1 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 5,
}
`;

exports[`upgradeMusicIndex v2 → current upgrades a v2 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 5,
}
`;

exports[`upgradeMusicIndex v3 → current upgrades a v3 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 5,
}
`;

exports[`upgradeMusicIndex v4 → current upgrades a v4 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": "/Artist/Album/Folder.jpg",
      "duration": 180.5,
      "genre": "Rock",
      "hasEmbeddedArt": false,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "hasEmbeddedArt": false,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 5,
}
`;
